monticore-generator/src/test/resources/cocos/invalid/A4102/A4102i.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4102;

grammar A4102i {

  A = "a";

  astrule A =
    b:Optional<String> max=*;

}